rns-lang/tests/snapshots/error-lexer-integers-huge_overflow.snap.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 10000000000000000000000000000000000000000
----- STDERR -----
Error: invalid integer
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/integers/huge_overflow.ja:1:7 ]
   │
 1 │ .code 10000000000000000000000000000000000000000
   │       ────────────────────┬────────────────────  
   │                           ╰────────────────────── '10000000000000000000000000000000000000000' is not a valid integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
