rns-lang/tests/snapshots/error-lexer-integers-minus_only_wasm.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code -
----- STDERR -----
Error: invalid integer
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/integers/minus_only.ja:1:7 ]
   │
 1 │ .code -
   │       ┬  
   │       ╰── '-' is not a valid integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
