rns-lang/tests/snapshots/error-lexer-integers-plus_sign.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code +123
----- STDERR -----
Error: unexpected character
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/integers/plus_sign.ja:1:7 ]
   │
 1 │ .code +123
   │       ┬  
   │       ╰── found '+' here
───╯
----- HASH -----
not generated
