rns-lang/tests/snapshots/error-lexer-strings-basic_unterminated_string_wasm.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with no ending quote
.end
----- STDERR -----
Error: unterminated string literal
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/strings/basic_unterminated_string.ja:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
