rns-lang/tests/snapshots/error-parser-outside_class_directive-dot_code_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code
.class public HelloWorld

.end method
----- STDERR -----
Error: unexpected directive before class definition
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/parser/outside_class_directive/dot_code.ja:1:1 ]
   │
 1 │ .code
   │ ──┬──  
   │   ╰──── '.code' is only allowed inside a method definition
   │ 
   │ Note: The '.code' directive is only valid inside a method definition. Define a method first using '.method [access_flags] <name> <descriptor>'.
───╯
----- HASH -----
not generated
